# NADA-Project-Extended

./: .gitignore  .nada-sensio.env.example  .nada-serve.env.example  .nada-transform.env.example  BUILD  CHANGELOG.md  Dockerfile.serve  LICENSE.md  README.md  go.mod  go.sum  gqlgen.yml  nada-ext.code-workspace  nada-serve.env.example  nada-serve.yaml  nada-transform.env.example  nada-transform_logs.txt  version.bzl  workspace.code-workspace
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: serve.yml
api/: fake.graphql  schema.graphql
cmd/: README.md
cmd/nada-sensio/: BUILD.bazel  README.md  main.go
cmd/nada-sensio-fulfiller/: BUILD.bazel  main.go
cmd/nada-serve/: BUILD.bazel  Dockerfile  main.go
cmd/nada-transform/: BUILD.bazel  README.md  database  main.go
configs/nada-transform/: .env
internal/app/common/env/: env.go
internal/app/common/model/: model.go
internal/app/common/myLog/: myLog.go
internal/app/nada-sensio/publisher/: publisher.go
internal/app/nada-sensio/simulation/: BUILD.bazel  nadasim.go
internal/app/nada-serve/config/: BUILD.bazel  config.go
internal/app/nada-serve/config/dotenv/: BUILD.bazel  parser.go
internal/app/nada-serve/dataloader/: BUILD.bazel  dataloader.go  measures.go  sensors.go
internal/app/nada-serve/db/: BUILD.bazel  csvq.go  db.go
internal/app/nada-serve/graph/: BUILD.bazel  resolver.go  schema.resolvers.go
internal/app/nada-serve/graph/model/: BUILD.bazel  models_gen.go
internal/app/nada-transform/database/: BUILD.bazel  database.go
internal/app/nada-transform/env/: env.go
internal/app/nada-transform/model/: model.go
internal/app/nada-transform/myLog/: myLog.go
internal/app/nada-transform/subscriber/: subscriber.go
internal/pkg/common/env/: BUILD.bazel
internal/pkg/common/model/: BUILD.bazel
internal/pkg/common/mqtt/: subscriber.go
internal/pkg/common/myLog/: BUILD.bazel  myLog.go
internal/pkg/common/myMqttClient/: BUILD.bazel  myMqttClient.go
scripts/: queries.flux  sample-data.flux
