load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nada-serve_lib",
    srcs = ["main.go"],
    importpath = "github.com/IMT-Atlantique-FIL-2020-2023/NADA-extended/cmd/nada-serve",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/nada-serve/config",
        "//internal/app/nada-serve/graph",
        "//internal/app/nada-serve/graph/generated",
        "//internal/app/nada-serve/graph/model",
        "//vendor/github.com/99designs/gqlgen/graphql",
        "//vendor/github.com/99designs/gqlgen/graphql/handler",
        "//vendor/github.com/99designs/gqlgen/graphql/playground",
        "//vendor/github.com/go-chi/chi",
        "//vendor/github.com/rs/cors",
        "//vendor/github.com/rs/zerolog/log",
    ],
)

go_binary(
    name = "nada-serve",
    embed = [":nada-serve_lib"],
    visibility = ["//visibility:public"],
)
