load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "simulation",
    srcs = ["nadasim.go"],
    importpath = "github.com/IMT-Atlantique-FIL-2020-2023/NADA-extended/internal/app/nada-sensio/simulation",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/aquilax/go-perlin"],
)
