load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dataloader",
    srcs = [
        "dataloader.go",
        "measures.go",
        "sensors.go",
    ],
    importpath = "github.com/IMT-Atlantique-FIL-2020-2023/NADA-extended/internal/app/nada-serve/dataloader",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/app/nada-serve/config",
        "//internal/app/nada-serve/db",
        "//internal/app/nada-serve/graph/model",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/graph-gophers/dataloader/v6:dataloader",
        "//vendor/github.com/influxdata/influxdb-client-go/v2/api",
    ],
)
