load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/IMT-Atlantique-FIL-2020-2023/NADA-extended/internal/app/nada-serve/graph",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/app/nada-serve/dataloader",
        "//internal/app/nada-serve/db",
        "//internal/app/nada-serve/graph/generated",
        "//internal/app/nada-serve/graph/model",
        "//vendor/github.com/influxdata/influxdb-client-go/v2:influxdb-client-go",
        "//vendor/github.com/influxdata/influxdb-client-go/v2/api",
        "//vendor/github.com/vektah/gqlparser/v2/gqlerror",
    ],
)
