load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "myMqttClient",
    srcs = ["myMqttClient.go"],
    importpath = "github.com/IMT-Atlantique-FIL-2020-2023/NADA-extended/internal/pkg/common/myMqttClient",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/common/myLog",
        "//vendor/github.com/eclipse/paho.mqtt.golang:paho_mqtt_golang",
    ],
)
